k8s/разные_файлы/5_limit_range_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ml-worker
  namespace: project-x
spec:
  containers:
  - name: nginx-container
    image: nginx
