k8s/разные_файлы/7_ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  namespace: platform
spec:
  ingressClassName: traefik
  rules:
  - host: app.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5678
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 5678
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5678
